# dumpingdesk

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: Dockerfile  package-lock.json  package.json  railway.toml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: severity-badge.tsx  status-pill.tsx
apps/web/src/lib/: api.ts
docs/: mvp-implementation-plan.md  railway-deployment.md
services/api/: Dockerfile  pyproject.toml  railway.toml
services/api/src/dumpingdesk_api/: __init__.py  main.py  sample_data.py
services/api/src/dumpingdesk_api/domain/: __init__.py  calculations.py  ingestion.py  models.py  validation.py
services/api/tests/: test_api.py  test_calculations.py  test_ingestion.py  test_validation.py
